# Otus-CXX-HW3

./: CMakeLists.txt  argument.cpp  argument.h  check_value.cpp  guess_process.cpp  high_scores.cpp  high_scores.h  high_scores.txt  main_basic.cpp  main_print_only_max.cpp  main_save_only_max.cpp  max_scores.txt  random_value.cpp  random_value.h  readme.md  user_interface.cpp  user_interface.h
